2014-12-22  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (do_ewmh_fullscreen): Don't remove maximized_horz/vert
	when going to fullscreen (Bug#0x180004f).

2014-12-18  Eli Zaretskii  <eliz@gnu.org>

	* window.c (Fwindow_body_width): Doc fix.  (Bug#19395)

2014-12-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buffer.c (syms_of_buffer) <Vafter_change_functions>: fix docstring.

2014-12-13  Eli Zaretskii  <eliz@gnu.org>

	* gnutls.c (gnutls_init): Fix deprecation warning from GCC.

2014-12-12  Eli Zaretskii  <eliz@gnu.org>

	* gnutls.c (Fgnutls_available_p, syms_of_gnutls):
	Move gnutls-available-p out of the HAVE_GNUTLS conditional, and define
	them only once.

2014-12-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* emacs.c (main): Always include gnutls.h and run syms_of_gnutls.

	* gnutls.h: Always declare syms_of_gnutls.

	* gnutls.c (Fgnutls_available_p syms_of_gnutls): Move later for
	clarity.  Let the availability check return Qnil when the GnuTLS
	integration is not available, instead of erroring out.
	(Bug#19346)

2014-12-10  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (move_it_in_display_line_to, display_line):
	Don't disallow overflow-newline-into-fringe when word-wrap is in
	effect.  (Bug#19300)

2014-12-04  Lee Duhem  <lee.duhem@gmail.com>  (tiny change)

	* eval.c (Fsignal): Remove duplicate test.
	(Fautoload_do_load): Fix up docstring.

2014-12-02  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (represented_filename, represented_frame): New variables.
	(ns_set_represented_filename): New function.
	(sendEvent:): Set represented filename here to avoid flicker,
	related to Bug#18757.

	* nsterm.h: Declare ns_set_represented_filename.

	* nsfns.m (ns_set_name_as_filename): Don't set represented filename
	at once, call ns_set_represented_filename instead.

2014-11-27  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (handle_single_display_spec): When ignoring a fringe
	bitmap display, reset the ignore_overlay_strings_at_pos_p flag.